--- a/2-Sviluppo-Web/package.json
+++ b/2-Sviluppo-Web/package.json
@@ -7,8 +7,10 @@
     "export": "slidev export"
   },
   "dependencies": {
-    "@slidev/cli": "^0.43.6",
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest"
+  },
+  "devDependencies": {
+    "@slidev/cli": "^0.48.8"
   }
 }
